--- a/src/locales/mn.json
+++ b/src/locales/mn.json
@@ -21,10 +21,10 @@
     "cardText": "YES, WE ARE BALANCERS"
   },
   "hero": {
-    "title1": "shaping Mongolia’s financial",
-    "title": "future with trust and innovation",
-    "title2": "Simplifying Investments ✨",
-    "startInvesting": "Start Investing Today",
+    "title1": "Монголын санхүүгийн ирээдүйг",
+    "title": "итгэлцэл ба инновациар бүтээе",
+    "title2": "Хөрөнгө оруулалтыг хялбаршуулъя ✨",
+    "startInvesting": "Өнөөдөр хөрөнгө оруулалтаа эхлүүл",
     "subtitle": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse feugiat nunc in leo vestibulum, at congue erat accumsan.",
     "cta": "Эхлэх"
   },
@@ -71,8 +71,8 @@
     "newsletter": "ХОЛБООТОЙ БАЙЦГААЯ",
     "subscribe": "Бүртгүүлэх",
     "address": "Улаанбаатар хот, СБД, 8-р хороо,\nЦентрал тауэр 4 давхар, 409 тоот",
-    "reserved": " BGM. Бүх эрх хуулиар хамгаалагдсан",
-    "links": "Линк",
+    "reserved": "BGM. Бүх эрх хуулиар хамгаалагдсан",
+    "links": "Холбоосууд",
     "terms-of-service": "Үйлчилгээний нөхцөл",
     "privacy-policy": "Нууцлалын бодлого",
     "pages": "Хуудаснууд",
@@ -83,16 +83,16 @@
     "contact": "Холбоо барих"
   },
   "emailAlerts": {
-    "title": "Email Alerts",
-    "subtitle": "FAQs Designed To Provide The Information You Need.",
-    "placeholder": "Your Email",
-    "cta": "Sign Up",
-    "signing": "Signing Up...",
-    "news": "News & Insights",
-    "market": "Market Outlook",
-    "funds": "Fund Updates",
-    "success": "Thanks! You’re subscribed.",
-    "failed": "Subscription failed. Please try again."
+    "title": "И-мэйл мэдэгдэл",
+    "subtitle": "Танд хэрэгтэй мэдээллийг хүргэх Түгээмэл асуултууд.",
+    "placeholder": "Таны и-мэйл",
+    "cta": "Бүртгүүлэх",
+    "signing": "Бүртгүүлж байна...",
+    "news": "Мэдээ & ойлголт",
+    "market": "Зах зээлийн тойм",
+    "funds": "Сангийн шинэчлэл",
+    "success": "Баярлалаа! Та амжилттай бүртгэгдлээ.",
+    "failed": "Бүртгэл амжилтгүй. Дахин оролдоно уу."
   },
   "newsInsight": {
     "title1": "Мэдээ",
@@ -101,7 +101,7 @@
     "category": "Төрөл",
     "news": "Мэдээ",
     "news-letter": "Мэдээний товхимол",
-    "outlook": "Outlook"
+    "outlook": "Тойм"
   },
   "about-us": {
     "title1": "Бидний тухай",
@@ -155,5 +155,59 @@
         "alt": "Тэтгэврийн ба хуримтлалын төлөвлөгөөний зураг"
       }
     }
+  },
+  "outlook": {
+    "title1": "Дэлхийн тойм",
+    "title2": "BGM Asset Management-н сар бүрийн дэлхийн хөрөнгө оруулалт ба макро ойлголтууд"
+  },
+  "careers": {
+    "title1": "BGM дахь ажил мэргэжил",
+    "title2": "BGM Asset Management-н дэлхийн эдийн засгийн мэдээ ба макро ойлголтууд",
+    "life-at-bgm": "BGM дахь амьдрал",
+    "benefits": "Бенефитүүд",
+    "students-and-graduates": "Оюутан ба төгсөгчид",
+    "students-and-graduates-text": "BGM нь “Career Journey” болон “Early Bird” дадлагын хөтөлбөрүүдийг санал болгодог бөгөөд оюутнуудад салбарын бодит туршлага, ур чадвар хөгжүүлэлт, ирээдүйн ажилтнуудын нөөцийг бүрдүүлэх боломжийг олгодог.",
+    "career-developments": "Карьерыг хөгжүүлэх",
+    "career-developments-text": "BGM нь мэргэжлийн гэрчилгээний дэмжлэг, харилцагчийн харилцаа, технологи, хөрөнгө оруулалт, манлайлал ба менежментийн ур чадварын BGM Academy хөтөлбөрүүд, мөн Harvard Business Institute, Udemy зэрэг байгууллагын онлайнаар суралцах багцуудыг санал болгож, ажилтнуудад дотоод ба гадаад мэргэжлийн сүлжээгээ хөгжүүлэх боломжийг бүрдүүлдэг.",
+    "social-campaign": "Нийгмийн сайн сайхны аян",
+    "social-campaign-text": "BGM нь цусны донорын үйл ажиллагаа, эрдэм шинжилгээний тэтгэлэг, жил бүрийн мод тарих зэргээр эрүүл мэнд, боловсрол, байгаль орчны санаачилгуудыг дэмждэг.",
+    "life-at-bgm-text": "BGM нь нийтлэг зорилго, эмх цэгцтэй, найдвартай ажиллагааг эрхэмлэдэг бөгөөд ажилтнуудынх нь дуу хоолойгоор хөгжилдөө урагшилдаг соёлыг эрхэмлэдэг.",
+    "purpose-culture": "Зорилготой соёл",
+    "purpose-culture-text": "BGM-ийн өдөр тутмын үйл ажиллагаа нь ажилтнуудын хариуцдаг ажлуудтай нягт уялдаж, нэг зорилгын төлөө хамтдаа ажилладаг.",
+    "order-culture": "Дүрэмтэй соёл",
+    "order-culture-text": "Бид тодорхой дүрэм журамд нийцэх, үйл ажиллагаагаа стандартчилах, тогтвортой нэг системийг хадгалах нь хийж буй бүх ажилд хамгийн чухал гэж үздэг.",
+    "v-of-emp": "Ажилтны дуу хоолой",
+    "v-of-emp-text": "Бид ажилтнуудын санаа, туршлага, санаачилгыг байгууллагын томоохон шийдвэр, бодлого боловсруулах, өдөр тутмын ажилд тусгахыг зорьдог.",
+    "benefits-text": "BGM нь ажилтнуудын санхүү, бие бялдар, сэтгэл зүй, ажил-амьдралын тэнцвэрийг дэмжих иж бүрэн хөтөлбөрүүдийг хэрэгжүүлдэг.",
+    "financial": "Санхүүгийн сайн сайхан байдал",
+    "life-balance": "Амьдрал-ажлын тэнцвэр",
+    "pay-for-perf": "Гүйцэтгэлд суурилсан шагнал",
+    "h&p-well-being": "Эрүүл мэнд ба бие бялдар",
+    "mental-well-being": "Сэтгэцийн эрүүл мэнд",
+    "career-journey": "Career Journey",
+    "career-journey-text": "Санхүү, хөрөнгө оруулалтад сонирхолтой төгсөх ангийн оюутнуудад зориулсан богино, чиглүүлэгтэй дадлагын хөтөлбөр—салбарын онцлог, ажлын дадлыг бодитоор мэдрүүлж, мэргэжлийн сонголтод дэм болдог.\n\nЖил бүр өргөн хүрээнд зохион байгуулагдаж, ирээдүйн мэргэжилтнүүдийн урсгалыг бэхжүүлж, салбарын хөгжилд хувь нэмэр оруулдаг.",
+    "early-bird": "Early Bird",
+    "early-bird-text": "Санхүү, банк, бизнесийн чиглэлийн оюутнуудад зориулсан цалинтай дадлагын хөтөлбөр.\n\nОнол ба практикийг хослуулсан энэхүү хөтөлбөр нь салбарын бодит ажлын туршлага олгож, шилдэг оролцогчдод ажиллах боломж нээдэг.",
+    "apply-now": "Одоо өргөдөл илгээх",
+    "pro-network": "Мэргэжлийн сүлжээ",
+    "health": "Эрүүл мэнд",
+    "health-text": "Нийгмийн хариуцлагынхаа хүрээнд бид ажилтнуудынхаа сайн дурын оролцоотой цусны донорын аяныг жил бүр зохион байгуулдаг.",
+    "edu": "Боловсрол",
+    "edu-text": "Бид Үндэсний Санхүүгийн Менежментийн 10-р олимпиадад ивээн тэтгэгчээр оролцсон.",
+    "env": "Байгаль орчин",
+    "env-text": "BGM нь “Орших Тогол” төслийн хүрээнд өөрийн төгөлтэй бөгөөд жил бүр түүндээ мод тарьдаг."
+  },
+  "search-job": {
+    "title1": "Ажлын байр хайх",
+    "title2": "Таны ур чадвар, зорилгод нийцсэн карьерийн боломжийг олж хараарай.",
+    "text": "Маягтыг бөглөнө үү \nТаны дараагийн карьер эндээс эхэлнэ",
+    "name": "Нэр",
+    "age": "Нас",
+    "edu": "Боловсрол",
+    "pos": "Албан тушаал",
+    "phone": "Утасны дугаар",
+    "email": "И-мэйл",
+    "fields-are-req": "Бүх талбарыг заавал бөглөнө үү",
+    "apply": "Өргөдөл илгээх"
   }
 }
