--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -118,15 +118,15 @@
     "value-text": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum mollis nunc a molestie dictum. Mauris venenatis, felis scelerisque aliquet lacinia, nulla nisi venenatis odio, id blandit mauris ipsum id sapien.",
     "ceo-name": "D.Odmaa",
     "ceo-pos": "Chief Executive Officer",
-    "bgm-name": "Balanced Growth\nManagement",
+    "bgm-name": "Balanced Growth Management",
     "text1": "Our company was established with the vision of combining traditional financial markets with technology and innovation to deliver professional, cutting-edge products and services. We operate with the investment and support of TESO Group",
     "text2": "As an asset management company, we create and manage investment funds as tools to grow wealth. By 2025, we manage a total portfolio of approximately ₮50 billion through two licensed private funds and a savings fund program.",
     "title1small": "Mission",
     "title2small": "Vision",
     "title3small": "Value",
-    "text1small": "Driving financial market growth with innovation and expertise",
-    "text2small": "Making global finance accessible for Mongolia",
-    "text3small": "Professional ethics\nand transparency\n\nInnovation & technology",
+    "text1small": "Driving financial market \ngrowth through innovation \nand expertise",
+    "text2small": "Making global finance \naccessible for Mongolia",
+    "text3small": "Professional ethics and \ntransparency Innovation and \ntechnology",
     "whatwedo": "What We Do ?",
     "BGTheory": "Balanced Growth Theory",
     "BGMAssetmanagement": "BGM Asset Management",
@@ -174,7 +174,7 @@
     "social-campaign-text": "BGM supports health, education, and environmental initiatives through blood donation, \nacademic sponsorships, and annual tree planting.",
     "life-at-bgm-text": "BGM values a culture of shared purpose, structured and reliable operations, and growth driven \nby listening to the voices of its employees.",
     "purpose-culture": "Purpose Culture",
-    "purpose-culture-text": "The operations of BGM are closely aligned with employees’ day-to-day responsibilities, all working together toward a clear and meaningful purpose.",
+    "purpose-culture-text": "The operations of BGM are closely aligned with employees’ day-to-day responsibilities, all working together toward a clear and meaningful \npurpose.",
     "order-culture": "Order Culture",
     "order-culture-text": "We believe that adhering to clear rules and procedures, standardizing our operations, and maintaining a consistent and sustainable system are of utmost importance in everything we do.",
     "v-of-emp": "Voice of Employee",
