--- a/src/locales/mn.json
+++ b/src/locales/mn.json
@@ -117,7 +117,7 @@
     "value-text": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum mollis nunc a molestie dictum. Mauris venenatis, felis scelerisque aliquet lacinia, nulla nisi venenatis odio, id blandit mauris ipsum id sapien.",
     "ceo-name": "Д.Одмаа",
     "ceo-pos": "Гүйцэтгэх захирал",
-    "bgm-name": "Balanced Growth\nManagement",
+    "bgm-name": "Balanced Growth Management",
     "text1": "Манай компани нь уламжлалт санхүүгийн зах зээлийг технологи ба инновацитай хослуулж, мэргэжлийн түвшний, дэвшилтэт бүтээгдэхүүн болон үйлчилгээг хүргэх зорилгоор байгуулагдсан. Бид TESO группийн хөрөнгө оруулалт болон дэмжлэгтэйгээр үйл ажиллагаа явуулдаг.",
     "text2": "Хөрөнгө удирдлагын компани болохын хувьд бид хөрөнгийн өсөлтийг дэмжих зорилготой хөрөнгө оруулалтын сангуудыг байгуулж, удирддаг. 2025 он гэхэд бид нийт ₮50 тэрбум төгрөгийн үнэлгээ бүхий хоёр тусгай зөвшөөрөлтэй хувийн сан болон хадгаламжийн хөтөлбөрийг удирдаж байна.",
     "title1small": "Эрхэм зорилго",
@@ -173,7 +173,7 @@
     "social-campaign-text": "BGM нь цусны донорын үйл ажиллагаа, эрдэм шинжилгээний тэтгэлэг, жил бүрийн мод тарих зэргээр эрүүл мэнд, боловсрол, байгаль орчны санаачилгуудыг дэмждэг.",
     "life-at-bgm-text": "BGM нь нийтлэг зорилго, эмх цэгцтэй, найдвартай ажиллагааг эрхэмлэдэг бөгөөд ажилтнуудынх нь дуу хоолойгоор хөгжилдөө урагшилдаг соёлыг эрхэмлэдэг.",
     "purpose-culture": "Зорилготой соёл",
-    "purpose-culture-text": "BGM-ийн өдөр тутмын үйл ажиллагаа нь ажилтнуудын хариуцдаг ажлуудтай нягт уялдаж, нэг зорилгын төлөө хамтдаа ажилладаг.",
+    "purpose-culture-text": "BGM-ийн өдөр тутмын үйл ажиллагаа нь ажилтнуудын хариуцдаг ажлуудтай нягт уялдаж, нэг зорилгын төлөө хамтдаа \nажилладаг.",
     "order-culture": "Дүрэмтэй соёл",
     "order-culture-text": "Бид тодорхой дүрэм журамд нийцэх, үйл ажиллагаагаа стандартчилах, тогтвортой нэг системийг хадгалах нь хийж буй бүх ажилд хамгийн чухал гэж үздэг.",
     "v-of-emp": "Ажилтны дуу хоолой",
