--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -23,7 +23,7 @@
   "hero": {
     "title1": "shaping Mongolia’s financial",
     "title": "future with trust and innovation",
-    "title2": "Simplifying Investments ✨",
+    "title2": "Simplifying Investments",
     "startInvesting": "Start Investing Today",
     "subtitle": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse feugiat nunc in leo vestibulum, at congue erat accumsan.",
     "cta": "Get Started"
