--- a/src/locales/mn.json
+++ b/src/locales/mn.json
@@ -23,7 +23,7 @@
   "hero": {
     "title1": "Монголын санхүүгийн ирээдүйг",
     "title": "итгэлцэл ба инновациар бүтээе",
-    "title2": "Хөрөнгө оруулалтыг хялбаршуулъя ✨",
+    "title2": "Хөрөнгө оруулалтыг хялбаршуулъя",
     "startInvesting": "Өнөөдөр хөрөнгө оруулалтаа эхлүүл",
     "subtitle": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse feugiat nunc in leo vestibulum, at congue erat accumsan.",
     "cta": "Эхлэх"
